--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "TerrificTable",
   "license": "GNU GENERAL PUBLIC LICENSE, Version 3",
   "dependencies": {
+    "@discordjs/builders": "^0.13.0",
     "discord.js": "^13.7.0"
   },
   "devDependencies": {
