--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "GNU GENERAL PUBLIC LICENSE, Version 3",
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "discord-api-types": "^0.32.1",
     "discord.js": "^13.7.0"
   },
   "devDependencies": {
