--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.1",
-    "discord.js": "^13.7.0"
+    "discord.js": "^13.7.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0"
