--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.7.0",
+    "fs": "^0.0.1-security",
     "request": "^2.88.2"
   },
   "devDependencies": {
