added password and username for Grafana

--- a/src/resources/config.json.sample
+++ b/src/resources/config.json.sample
@@ -1,3 +1,8 @@
 {
-    "token": "YOUR BOT TOKEN HERE"
+    "token": "YOUR BOT TOKEN HERE",
+    "guildId": "YOUR GUILD ID",
+    "clientId": "BOT ID",
+
+    "username": "YOUR GRAFANA USERNAME HERE",
+    "password": "YOUR GRAFANA PASSWORD HERE"
 }
