added grafana ip and port to be defined in config file

--- a/src/resources/config.json.sample
+++ b/src/resources/config.json.sample
@@ -3,6 +3,7 @@
     "guildId": "YOUR GUILD ID",
     "clientId": "BOT ID",
 
+    "grafana": "GRAFANA IP : GRAFANA PORT",
     "username": "YOUR GRAFANA USERNAME HERE",
     "password": "YOUR GRAFANA PASSWORD HERE"
 }
