--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.7.0",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "mqtt": "^4.3.7"
   },
   "devDependencies": {
     "eslint": "^8.15.0"
