added: "mqtt_server", "mqtt_user", "mqtt_pass" to be able to connect ot mqtt server

--- a/src/resources/config.json.sample
+++ b/src/resources/config.json.sample
@@ -6,4 +6,8 @@
     "grafana": "GRAFANA IP : GRAFANA PORT",
     "username": "YOUR GRAFANA USERNAME HERE",
     "password": "YOUR GRAFANA PASSWORD HERE"
+
+    "mqtt_server": "IP TO MQTT SERVER HERE", 
+    "mqtt_user": "MQTT USERNAME HERE",
+    "mqtt_pass": "MQTT PASSWORD HERE"
 }
